--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  SPM (Sustainable project Management)
 </p>
 <p>
-  Sean made a change
+The Deployment of SPM (Sustainable Project Management) in International Projects aims to enhance Telecom Egypt’s sustainability efforts and operational efficiency. This project is driven by the need to adapt to global sustainable development goals and improve energy consumption practices within the organization.
 </p>
 
 </body>
